name:                revm
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/revm#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , RE.Program
                     , RE.Insn
                     , RE.AST
                     , RE.Parse
                     , RE.Compile
                     , RE.Interpret
                     , RE.Match
                     , RE.Gen
                     , RE.Gen.C
  build-depends:       base >= 4.7 && < 5
                     , free >= 4.12.1 && < 4.13
                     , trifecta >= 1.5.2 && < 1.6
                     , mtl >= 2.2.1 && < 2.3
                     , containers >= 0.5.6.2 && < 0.5.7
  default-language:    Haskell2010

executable revm-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , revm
  default-language:    Haskell2010

test-suite revm-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , revm
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/revm
